# raindrop-rust

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: ci.yml  conformance.yml  publish.yml  release.yml
conformance/: Cargo.toml  failures.txt
conformance/src/: main.rs
contract-fixtures/: README.md
contract-fixtures/v1/: meta.json
contract-fixtures/v1/live/: bad-tracehex.json  reasoning-delta.json  status.json  text-delta.json  tool-result.json  tool-start-missing-spanid.json  tool-start-with-event-correlation.json  tool-start-with-workspace-meta.json  tool-start.json
contract-fixtures/v1/replay/: adapter-request.json  adapter-response.json  health-response.json  register-request.json
contract-fixtures/v1/traces/: ai-sdk-and-traceloop-only.json  dual-emission.json  legacy-only.json  multi-span-batch.json  single-llm-span.json  single-tool-span.json
contract-fixtures/v1/track/: array-batch.json  single-event.json  with-replay-runid.json  with-workspace-properties.json
contract-fixtures/v1/track-partial/: begin.json  finish.json  top-level-input.json  with-context-block.json  with-trace-id-only.json
examples/: begin_finish.rs  e2e_verify.rs  manual_spans.rs  track_ai.rs
scripts/: sync_contract_fixtures.sh
src/: buffer.rs  client.rs  error.rs  events.rs  helpers.rs  http.rs  lib.rs  local_debugger.rs  otlp.rs  project_id.rs  signals.rs  trace_buffer.rs  traces.rs  users.rs
src/contract/: mod.rs
src/contract/v1/: attrs.rs  live.rs  mod.rs  replay.rs  track.rs  workshop_detection.rs  workspace.rs
tests/: concurrency.rs  contract_attrs.rs  contract_corpus.rs  contract_live.rs  contract_replay.rs  contract_workshop_detection.rs  contract_workshop_mirror.rs  contract_workspace.rs  e2e.rs  e2e_real_agent.rs  empty_events_repro.rs  events.rs  hardening.rs  local_debugger.rs  project_id.rs  traces.rs  transport.rs  wire_format.rs
tests/common/: mod.rs
