[package]
name = "raindrop-ai"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Raindrop AI observability SDK for Rust — track AI events, signals, and OTLP-style traces."
authors = ["Raindrop AI <sdk@raindrop.ai>"]
license = "MIT"
homepage = "https://raindrop.ai"
repository = "https://github.com/invisible-tools/raindrop-rust"
readme = "README.md"
publish = false

[lib]
name = "raindrop"
path = "src/lib.rs"

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio = { version = "1.36", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4"] }
base64 = "0.22"
rand = "0.8"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
thiserror = "1.0"
tracing = { version = "0.1", default-features = false, features = ["std"] }
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.36", features = ["full", "test-util"] }
wiremock = "0.6"
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
