[package]
name = "raindrop-ai"
version = "0.0.2"
edition = "2021"
rust-version = "1.88"
description = "Raindrop AI observability SDK for Rust (Beta) — track AI events, signals, and OTLP-style traces."
authors = ["Raindrop AI <sdk@raindrop.ai>"]
license = "MIT"
homepage = "https://raindrop.ai"
repository = "https://github.com/raindrop-ai/raindrop-rust"
documentation = "https://docs.raindrop.ai/sdk/rust"
readme = "README.md"
keywords = ["raindrop", "observability", "ai", "llm", "tracing"]
categories = ["development-tools::debugging", "api-bindings"]
publish = false

[lib]
name = "raindrop"
path = "src/lib.rs"

[features]
# Feature names mirror reqwest 0.13's TLS backend selectors. In 0.13 reqwest's
# `rustls` backend defaults to `rustls-platform-verifier` for roots and
# `aws-lc-rs` (instead of `ring`) as the crypto provider — both transparent to
# this SDK, but customers who depend on those backends benefit from being on
# the same reqwest major as us so cargo can dedupe.
default = ["rustls"]
rustls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json"] }
tokio = { version = "1.36", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4"] }
base64 = "0.22"
rand = "0.8"
time = { version = "0.3", features = ["formatting", "parsing"] }
thiserror = "1.0"
tracing = { version = "0.1", default-features = false, features = ["std"] }
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.36", features = ["full", "test-util"] }
# `macros` is only needed by the test suite (e.g. `time::macros::datetime!`),
# not the library itself. Pulling it into [dev-dependencies] keeps lib consumer
# builds smaller.
time = { version = "0.3", features = ["macros"] }
wiremock = "0.6"
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1.3"
